# expense-x-web

./: .gitignore  CMakeLists.txt  README.md
frontend/: bills.html  budgets.html  dashboard.html  index.html  transactions.html
frontend/css/: style.css
frontend/js/: api.js  auth.js  bills.js  budgets.js  dashboard.js  transactions.js
src/: auth.cpp  auth.h  database.cpp  database.h  main.cpp  sha256.h
src/libs/: json.hpp
